2016-05-01  SilverNexus
	* ErrorLog.c: Changed the month and error titles to be const char * const
	  instead of const char *. This allows for slightly more aggressive optimization.

2016-04-30  SilverNexus
	* jump_table.c: Changed the jump table to be stack allocated.
	  Removed implementation of initialization and cleanup, since no longer
	  dynamically allocated.
	* jump_table.h: Changed the extern declaration to match the new jump table.
	  Removed prototypes for initialization and cleanup of jump table.
	* main.c: Removed calls to initialization and cleanup of jump table.

2016-01-28  SilverNexus
	* search.c: Preprocess out some info-level calls to log_event. The usually aren't needed,
	  and add a bit of overhead to directory parsing.

2016-01-26  SilverNexus
	* search.c: Revert back to strstr when done parsing a file with fileperuser_memmem.
	* fileperuser_search.c: Fixed segfault when haystack_len is shorter than needle_len.
	* *.c: Add GNU GPL 2 Header to the files and reformat the file information comments.
	* *.h: Reformat file information comments.

2016-01-25  SilverNexus
	* Makefile.am: Add build rules for new source files.
	* fileperuser_search.c: Add custom implementations for memmem and memcasemem.
	* fileperuser_search.h: Add declarations for custom substring functions.
	* search.c: Implement use of custom substring functions.
	* jump_table.c: Abstract out Boyer-Moore jump table creation from the search functions.
	* jump_table.h: Declare functions for Boyer-Moore substring jumps.
	* settings.h: Add a flag for case-insensitive searches.
	  Add defines for the jump table limits for each case-sensitive and -insensitive searches.
	* parseArgs.c: Use fileperuser_memcasemem on case-insensitive searches and set the flag.
	* main.c: Set up the jump table before searching begins.
	* README: Update requirements and usage.
	* configure.ac: Remove check for strcasestr, as it is no longer used.